chore: restful 규칙에 따른 url 변경
