# src/main/resources/swagger.yaml
@@ -9,7 +9,7 @@ servers:
     description: 로컬 개발 서버
 
 paths:
-  /user/register:
+  /users:
     post:
       summary: 사용자 회원가입
       tags:
@@ -28,7 +28,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/UserResponse"
 
-  /user/login:
+  /users/login:
     post:
       summary: 사용자 로그인
       tags:
@@ -47,7 +47,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ApiResponse"
 
-  /post/list:
+  /posts:
     get:
       summary: 게시글 목록 조회
       tags:
@@ -61,8 +61,6 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Post"
-
-  /post/create:
     post:
       summary: 게시글 생성
       tags:
